--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+appdirs==1.4.4
 asgiref==3.8.1
+baron==0.10.1
 crispy-bootstrap5==2024.2
+dj-database-url==2.2.0
+dj-email-url==1.0.6
 Django==5.0.6
 django-allauth==0.63.3
+django-cache-url==3.4.5
 django-crispy-forms==2.2
+django-environs==0.1.1
+environs==11.0.0
+marshmallow==3.21.3
+packaging==24.1
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+redbaron==0.9.2
+rply==0.7.8
 sqlparse==0.5.0
 typing_extensions==4.12.2
