--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 env:
-  DJANGO_SECRET_KEY: "django-insecure-!rq3$$t6dl%@r#@ym$$itntoock9mx$$jd-y!a^c@38cg08qbcw6="
+  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
   DJANGO_DEBUG: "True"
 
 jobs:
