--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -4,11 +4,15 @@ on:
   push:
     branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master" ]   
 
 env:
   DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
   DJANGO_DEBUG: "True"
+  POSTGRES_DB: "postgres"
+  POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "postgres"
+  POSTGRES_HOST: "db"
 
 jobs:
   build:
@@ -18,6 +22,10 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.10']
+
+    services:
+      db:
+        image: postgres:13
 
     steps:
     - uses: actions/checkout@v4
