--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,12 @@ jobs:
     services:
       db:
         image: postgres:13
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
 
     steps:
     - uses: actions/checkout@v4
