--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,7 +45,8 @@ jobs:
         pip install -r requirements.txt
     - name: Setup Django
       run: |
-        python manage.py makemigrations
+        python manage.py makemigrations accounts
+        python manage.py makemigrations books
         python manage.py migrate
     - name: Run Tests
       run: |
